# pka_sentry_2026

./: .gitignore  README.en.md  README.md  behaviortree.sh  git.sh  map.sh  nav.sh  nav_new.sh  publish_script.sh
.cache/clangd/index/: assert.hpp.1B4B5893A408675E.idx  assert.hpp.2F0D9C99C7870F09.idx  assert.hpp.66D351B74C612599.idx  assert.hpp.9880FEE88C2460CF.idx  back_up_free_space.cpp.0D58BA808FE3BF40.idx  back_up_free_space.cpp.5D646A6030853F1A.idx  back_up_free_space.cpp.7531AD58A38129D3.idx  back_up_free_space.cpp.F83CE538E576B237.idx  back_up_free_space.hpp.54E000DBD584A6D1.idx  back_up_free_space.hpp.6825CF8FD2530336.idx  back_up_free_space.hpp.CD74F25E8B9F46D3.idx  back_up_free_space.hpp.DC0FC09B41B2E12E.idx  bt_action_node.hpp.8649C2E1C6990371.idx  bt_action_node.hpp.99D94398495C9A7C.idx  bt_action_node.hpp.B5B85CF005031286.idx  bt_action_node.hpp.C7FC4B74EBD2E88B.idx  bt_conversions.hpp.56B6ED3A4E1D71AD.idx  bt_conversions.hpp.A98D3AE71605AB62.idx  bt_conversions.hpp.B61ED5D0D177C65C.idx  bt_conversions.hpp.BED9DCADE90C7BB4.idx  bt_topic_pub_node.hpp.0D455365CD301C3C.idx  bt_topic_pub_node.hpp.52925A75EAE54954.idx  bt_topic_pub_node.hpp.7C7B1831D39A1137.idx  bt_topic_pub_node.hpp.B7B62396B632ED65.idx  bt_topic_sub_node.hpp.8C583102803998D7.idx  bt_topic_sub_node.hpp.920E937B8191D797.idx  bt_topic_sub_node.hpp.A27CCFFCCB38BE66.idx  bt_topic_sub_node.hpp.EE30F2F3D4031666.idx  calculate_attack_pose.cpp.15630C0B37F18596.idx  calculate_attack_pose.cpp.CAACCAC6FDD12DC4.idx  calculate_attack_pose.cpp.DAE81AC96875E57B.idx  calculate_attack_pose.hpp.38284EB352111D28.idx  calculate_attack_pose.hpp.570E96EDB8A9EE4C.idx  calculate_attack_pose.hpp.8B147FB70C6F93AB.idx  can_fire.cpp.1BE5BDD83E2B419A.idx  can_fire.cpp.49BAF2B34CD280C3.idx  can_fire.cpp.7C4522B0CED58DDC.idx  can_fire.cpp.CCA1A12C898D937A.idx  can_fire.hpp.9A31EE9DB663BA1C.idx  can_fire.hpp.A37E76E30A0D7060.idx  (+463 more)
src/pb2025_robot_description/: CMakeLists.txt  README.md  package.xml
src/pb2025_robot_description/launch/: robot_description_launch.py
src/pb2025_sentry_nav/ign_sim_pointcloud_tool/: CMakeLists.txt
src/pb2025_sentry_nav/livox_ros_driver2/: package.xml
src/pb2025_sentry_nav/loam_interface/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/pb2025_nav_bringup/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/pb_nav2_plugins/: CMakeLists.txt  NOTICE  README.md  costmap_plugins.xml  package.xml
src/pb2025_sentry_nav/pb_omni_pid_pursuit_controller/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/pb_teleop_twist_joy/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/point_lio/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/point_lio/PCD/ScanContext/: poses.txt
src/pb2025_sentry_nav/point_lio/PCD/ScanContext/SCD/: 0.scd  11.scd  13.scd  15.scd  20.scd  21.scd  27.scd  28.scd  30.scd  31.scd  32.scd  35.scd  36.scd  37.scd  38.scd  4.scd  44.scd  46.scd  49.scd  5.scd  52.scd  53.scd  55.scd  57.scd  58.scd  60.scd  61.scd  66.scd  9.scd
src/pb2025_sentry_nav/point_lio/src/: IMU_Processing.cpp  IMU_Processing.h  Scancontext.cpp  Scancontext.h  laserMapping.cpp
src/pb2025_sentry_nav/pointcloud_to_laserscan/: CMakeLists.txt
src/pb2025_sentry_nav/rm_behavior_tree/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/rm_behavior_tree/config/: GoalPose_Fire.xml  Project.btproj  RMUC2.xml  RMUC3.xml  RMUL11111.xml  RMUL22222.xml  RMUL33333.xml  attack_left.xml  test1.xml  test2.xml  test3.xml  test4.xml  test5.xml  waypoint.xml
src/pb2025_sentry_nav/rm_behavior_tree/include/rm_behavior_tree/: bt_conversions.hpp  custom_types.hpp
src/pb2025_sentry_nav/rm_behavior_tree/include/rm_behavior_tree/plugins/action/: calculate_attack_pose.hpp  can_fire.hpp  check_goal_reached.hpp  pub_nav2_goal.hpp  robot_control.hpp  sub_all_robot_hp.hpp  sub_armors.hpp  sub_decision_num.hpp  sub_game_status.hpp  sub_global_costmap.hpp  sub_rfid_status.hpp  sub_robot_status.hpp
src/pb2025_sentry_nav/rm_behavior_tree/include/rm_behavior_tree/plugins/condition/: calculate_game_time.hpp  is_attacked.hpp  is_detect_enemy.hpp  is_friend_ok.hpp  is_game_time.hpp  is_outpost_ok.hpp  is_rfid_detected.hpp  is_rfid_not_detected.hpp  is_status_bad.hpp  is_status_best.hpp  is_status_middle.hpp  is_status_ok.hpp
src/pb2025_sentry_nav/rm_behavior_tree/include/rm_behavior_tree/plugins/control/: decision_switch.hpp
src/pb2025_sentry_nav/rm_behavior_tree/launch/: rm_behavior_tree.launch.py
src/pb2025_sentry_nav/rm_behavior_tree/plugins/action/: calculate_attack_pose.cpp  calculate_game_time.cpp  can_fire.cpp  check_goal_reached.cpp  pub_nav2_goal.cpp  robot_control.cpp  send_goal.cpp  sub_all_robot_hp.cpp  sub_armors.cpp  sub_decision_num.cpp  sub_game_status.cpp  sub_global_costmap.cpp  sub_rfid_status.cpp  sub_robot_status.cpp
src/pb2025_sentry_nav/rm_behavior_tree/plugins/condition/: is_attacked.cpp  is_detect_enemy.cpp  is_friend_ok.cpp  is_game_time.cpp  is_outpost_ok.cpp  is_rfid_detected.cpp  is_rfid_not_detected.cpp  is_status_bad.cpp  is_status_best.cpp  is_status_middle.cpp  is_status_ok.cpp
src/pb2025_sentry_nav/rm_behavior_tree/plugins/control/: decision_switch.cpp
src/pb2025_sentry_nav/rm_behavior_tree/src/: rm_behavior_tree.cpp
src/pb2025_sentry_nav/rm_interfaces/: CMakeLists.txt  package.xml
src/pb2025_sentry_nav/rm_interfaces/msg/: EventData.msg  GameStatus.msg  IsAttacked.msg  NavigationReceive.msg  NavigationSend.msg  RfidStatus.msg  RobotStatus.msg  SerialReceiveData.msg
src/pb2025_sentry_nav/rm_serial_driver/: CMakeLists.txt  (+1 more)
src/pb2025_sentry_nav/small_gicp_relocalization/: CMakeLists.txt  README.md  package.xml
src/pb2025_sentry_nav/small_gicp_relocalization/include/small_gicp_relocalization/: small_gicp_relocalization.hpp
src/pb2025_sentry_nav/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
src/pb2025_sentry_nav/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
src/rm_upstart/: rm_watch_dog.sh
src/rmu_gazebo_simulator/: CMakeLists.txt  README.md  follow.sh  package.xml  web_player.sh  web_referee.sh
src/sdformat_tools/: setup.py
(+165 files in other folders)
